# mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  tools.yaml
.github/workflows/: build-sandbox.yml  build-server.yml  build.yml
docs/: fetch.md  links.md  python.md  sandbox.md  search.md  web.md
mcp_server/: __init__.py  __main__.py  server.py  startup.py
mcp_server/tools/: __init__.py  fetch.py  helpers.py  links.py  prompts.py  python.py  web.py  workspace.py
sandbox/: Dockerfile  entrypoint.sh  pyproject.toml
server/: Dockerfile  entrypoint.sh  pyproject.toml  tools.yaml
server/mcp_server/: __init__.py  __main__.py  server.py
server/mcp_server/tools/: __init__.py  helpers.py  sandbox.py  search.py  shell.py  web.py
server/tests/: __init__.py  conftest.py  test_sandbox.py  test_server.py  test_web.py  test_workspace.py
src/mcp_server/: __main__.py  tools.py
tests/: conftest.py  test_python.py  test_server.py  test_web.py  test_workspace.py
