[project]
name = "mcp-sandbox"
version = "0.1.0"
description = "Small Ubuntu environment to provide LLMs with shell access"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiodns>=3.2.0",
  "aiohttp>=3.11.12",
  "beautifulsoup4>=4.13.3",
  "numpy>=2.2.3",
  "pandas>=2.2.3",
  "requests>=2.32.3",
  "ruff>=0.9.7",
]
